--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,600;1,700&family=Merriweather:ital,wght@0,400;0,700;0,900;1,700&display=swap');
+
+/* font-family: 'Merriweather',
+serif;  : for headings and main text purposes  Font weight avail : 700, 700 italic, 900 & 400 */
+
+/* font-family: 'Lora', serif; weight : 700 italic :- for nav brand logo */
+/* font-family: 'Lora', serif; weight : 600 semibold :- for comments  */
+
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* Color Pallets :
+* Purple : #4A4063, #CCB8D6, #513E43, #783F8E, #49275B
+* Blue : #161925, #23395B, #406E8E,#8EA8C3, #CBF7ED 
+/* Summer Color Palette
+#F7E06C, #F8CED2, #ED5B46, #8BD0B4, #D8EEE7
+ */
+
+/* 
+ Sunset Color Palette #983275,
+ #811D5E,
+ #FD2F24,
+ #FF6F01,
+ #FED800 */
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Merriweather',
+    sans-serif,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  letter-spacing: 3px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #CCB8D6 !important;
+  /* from purple color pallete */
 }
 
 code {
