--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ serif;  : for headings and main text purposes  Font weight avail : 700, 700 ital
 /* font-family: 'Lora', serif; weight : 600 semibold :- for comments  */
 
 
+:root{
+  --primary:#4A4063;
+  --secondary:#CCB8D6;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -40,7 +45,7 @@ body {
   letter-spacing: 3px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #CCB8D6 !important;
+  background-color: var(--secondary);
   /* from purple color pallete */
 }
 
