--- a/src/comps/commentInput/styles.css
+++ b/src/comps/commentInput/styles.css
@@ -1,3 +1,6 @@
-#comment_input{
-    width:"100%";
+.comment_input {
+    margin-top:15px;
+    padding:5px 10px;
+    width: 100%;
+    outline:0;
 }
