--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@ serif;  : for headings and main text purposes  Font weight avail : 700, 700 ital
 /* font-family: 'Lora', serif; weight : 600 semibold :- for comments  */
 
 
-:root{
-  --primary:#CCB8D6;
-  --secondary:#4A4063;
+:root {
+  --primary: #CCB8D6;
+  --secondary: #4A4063;
 }
 
 * {
@@ -47,10 +47,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary) !important;
+  scroll-behavior: smooth;
+
   /* from purple color pallete */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+::-webkit-scrollbar{
+  display:none;
 }
